--- a/public/desain01.html
+++ b/public/desain01.html
@@ -30,7 +30,7 @@
       <!-- KANAN (scrollable) -->
       <div
         id="kontenKanan"
-        class="w-full overflow-y-auto scroll-smooth sm:w-[400px] sm:flex-shrink-0"
+        class="w-full overflow-y-auto scroll-smooth sm:w-[400px] sm:flex-shrink-0 overflow-x-hidden"
       >
         <!-- HALAMAN 1 -->
         <section
@@ -98,20 +98,18 @@
             />
           </div>
           <h1
-            class="scroll-fade scroll-fade-bottom mt-2 transition-all delay-2000 duration-3000"
+            class="scroll-fade scroll-fade-bottom mt-2 transition-all delay-1000 duration-3000"
           >
             the wedding of
           </h1>
           <div
-            class="scroll-fade scroll-fade-bottom leading-none transition-all delay-3000 duration-3000"
+            class="scroll-fade scroll-fade-bottom leading-none transition-all delay-1500 duration-3000"
           >
             <h1 class="font-pinyon -mb-5 text-[55px] font-medium">Ayundya</h1>
             <div class="font-pinyon my-[-4px] text-5xl leading-none">&</div>
             <h1 class="font-pinyon -mt-5 text-[55px] font-medium">Baskoro</h1>
             <h2 class="font-bold">25.09.2025</h2>
           </div>
-
-          <!-- konten tambahan halaman 2 bisa kamu lanjutkan -->
         </section>
         <!-- halaman 3 -->
         <section
@@ -121,24 +119,30 @@
           <!-- Logo -->
           <div class="relative z-40 flex justify-center pt-10 pb-10">
             <img
-              class="xm:-mt-5 xxm:-mt-18 h-auto w-70 sm:-mt-0 sm:w-50"
+              class="xm:-mt-5 xxm:-mt-18 scroll-fade h-auto w-70 transition-all duration-4000 sm:-mt-0 sm:w-50"
               src="img/01/page3/frame.png"
               alt=""
             />
           </div>
           <div class="mx-10 -mb-19 text-center text-[11px]">
-            <p class="mb-4 leading-relaxed font-bold">
+            <p
+              class="scroll-fade scroll-fade-bottom mb-4 leading-relaxed font-bold transition-all delay-100 duration-3000"
+            >
               Dan di antara tanda-tanda (kebesaran)-Nya ialah Dia menciptakan
               pasangan pasangan untukmu dari jenismu sendiri, agar kamu
               cenderung dan merasa tenteram kepadanya, dan Dia menjadikan di
               antaramu rasa kasih dan sayang.
             </p>
-            <p class="mx-2 mb-4 font-bold">
+            <p
+              class="scroll-fade scroll-fade-bottom mx-2 mb-4 font-bold transition-all delay-200 duration-3000"
+            >
               Sungguh, pada yang demikian itu <br />benar-benar terdapat
               tanda-tanda <br />
               (kebesaran Allah) bagi kaum yang berpikir.
             </p>
-            <p class="mt-6 text-sm font-bold tracking-widest uppercase">
+            <p
+              class="scroll-fade scroll-fade-bottom mt-6 text-sm font-bold tracking-widest uppercase transition-all delay-200 duration-3000"
+            >
               QS Ar-Rum : 21
             </p>
           </div>
@@ -148,7 +152,7 @@
             <img
               src="img/01/page3/bunga page3.png"
               alt="Bunga Atas"
-              class="xm:-mt-30 w-full sm:-mt-0"
+              class="xm:-mt-30 scroll-fade w-full transition-all duration-4000 sm:-mt-0"
             />
           </div>
         </section>
@@ -169,24 +173,41 @@
           <div class="mx-6">
             <div class="relative z-40 mt-10">
               <img
-                class="xm:-mt-5 xxm:-mt-18 h-auto w-90 sm:-mt-0"
+                class="xm:-mt-5 xxm:-mt-18 scroll-fade scroll-fade-top h-auto w-90 transition-all duration-4000 sm:-mt-0"
                 src="img/01/page4/pengantin wanita (1).png"
                 alt=""
               />
             </div>
             <!-- type -->
             <div class="relative z-50 -mt-83 ml-35 text-left">
-              <p class="text-xs font-bold">Mempelai Wanita</p>
-              <p class="font-pinyon text-3xl">Ayundya</p>
-              <p class="mb-5 text-xl font-bold">Prameswari</p>
-              <p class="mb-5 text-[11px]">
+              <p
+                class="scroll-fade scroll-fade-bottom text-xs font-bold transition-all delay-200 duration-3000"
+              >
+                Mempelai Wanita
+              </p>
+              <p
+                class="font-pinyon scroll-fade scroll-fade-bottom text-3xl transition-all delay-400 duration-3000"
+              >
+                Ayundya
+              </p>
+              <p
+                class="scroll-fade scroll-fade-bottom mb-5 text-xl font-bold transition-all delay-400 duration-3000"
+              >
+                Prameswari
+              </p>
+              <p
+                class="scroll-fade scroll-fade-bottom mb-5 text-[11px] transition-all delay-600 duration-3000"
+              >
                 Putri pertama dari <br />
-                <span class="font-bold"
+                <span
+                  class="scroll-fade scroll-fade-bottom font-bold transition-all delay-800 duration-3000"
                   >Bapak H. Bambang Santoso <br />
                   & Ibu Hj. Nurhayati</span
                 >
               </p>
-              <p class="text-[11px]">
+              <p
+                class="scroll-fade scroll-fade-bottom text-[11px] transition-all delay-1000 duration-3000"
+              >
                 Jl. Cempaka Indah No. 21 <br />
                 Kel. Sukamaju, Kec. Tegalrejo <br />
                 Yogyakarta 55243
@@ -203,24 +224,41 @@
           <div class="mx-6">
             <div class="relative z-40 pt-20">
               <img
-                class="xm:-mt-5 xxm:-mt-18 h-auto w-90 sm:-mt-0"
+                class="xm:-mt-5 xxm:-mt-18 scroll-fade scroll-fade-bottom h-auto w-90 transition-all duration-4000 sm:-mt-0"
                 src="img/01/page5/PENGANTIN PRIA.png"
                 alt=""
               />
             </div>
             <!-- type -->
             <div class="relative z-50 -mt-75 mr-36 text-right">
-              <p class="text-xs font-bold">Mempelai Pria</p>
-              <p class="font-pinyon text-3xl">Baskoro</p>
-              <p class="mb-5 text-xl font-bold">Satya Nugroho</p>
-              <p class="mb-5 text-[11px]">
+              <p
+                class="scroll-fade scroll-fade-top text-xs font-bold transition-all delay-200 duration-3000"
+              >
+                Mempelai Pria
+              </p>
+              <p
+                class="font-pinyon scroll-fade scroll-fade-top text-3xl transition-all delay-400 duration-3000"
+              >
+                Baskoro
+              </p>
+              <p
+                class="scroll-fade scroll-fade-top mb-5 text-xl font-bold transition-all delay-400 duration-3000"
+              >
+                Satya Nugroho
+              </p>
+              <p
+                class="scroll-fade scroll-fade-top mb-5 text-[11px] transition-all delay-600 duration-3000"
+              >
                 Putra kedua dari <br />
-                <span class="font-bold"
+                <span
+                  class="scroll-fade scroll-fade-top font-bold transition-all delay-800 duration-3000"
                   >Bapak H. Widodo<br />
                   & Ibu Hj. Siti Rohmah</span
                 >
               </p>
-              <p class="text-[11px]">
+              <p
+                class="scroll-fade scroll-fade-top text-[11px] transition-all delay-1000 duration-3000"
+              >
                 Jl. Mawar No. 23<br />
                 Kelurahan Mantrijeron<br />
                 Kecamatan Mantrijeron <br />
@@ -237,25 +275,29 @@
           <!-- bunga -->
           <div class="">
             <div>
-              <img src="img/01/page6/bg bunga atas.png" alt="" />
+              <img
+                class="scroll-fade scroll-fade-top transition-all duration-6000"
+                src="img/01/page6/bg bunga atas.png"
+                alt=""
+              />
             </div>
             <!-- emblem -->
             <div class="relative z-30 mx-auto -mt-60 flex justify-center">
               <img
-                class="h-[370px] w-auto"
+                class="scroll-fade scroll-fade-left h-[370px] w-auto transition-all duration-4000"
                 src="img/01/page4/emblem.png"
                 alt=""
               />
             </div>
             <div class="relative z-50 mx-auto -mt-70 text-center">
-              <p class="font-pinyon text-4xl">Akad Nikah</p>
-              <p class="mb-5 text-xl font-bold">
+              <p class="font-pinyon text-4xl scroll-fade scroll-fade-right transition-all duration-4000 delay-200">Akad Nikah</p>
+              <p class="mb-5 text-xl font-bold scroll-fade scroll-fade-right transition-all duration-4000 delay-400">
                 Minggu, <br />
                 14 Desember 2025
               </p>
-              <p class="mb-5 text-[11px] font-bold">
+              <p class="mb-5 text-[11px] font-bold scroll-fade scroll-fade-right transition-all duration-4000 delay-600">
                 08.00 WIB - selesai <br />
-                <span class="font-normal"
+                <span class="font-normal scroll-fade scroll-fade-right transition-all duration-4000 delay-800"
                   >Masjid Raya Al-Furqan <br />
                   Jl. Melati No. 88, <br />
                   Yogyakarta</span
@@ -263,7 +305,11 @@
               </p>
             </div>
             <div class="-mt-26">
-              <img src="img/01/page6/bg bunga bawah.png" alt="" />
+              <img
+                class="scroll-fade scroll-fade-bottom transition-all duration-6000"
+                src="img/01/page6/bg bunga bawah.png"
+                alt=""
+              />
             </div>
           </div>
         </section>
@@ -273,7 +319,7 @@
           class="-mt-0.5 hidden min-h-svh bg-[url('img/01/Page1/background.png')] bg-cover bg-center bg-repeat text-center"
         >
           <!-- bunga -->
-          <div class="-mt-15 sm:-mt-0">
+          <div class="-mt-15 sm:-mt-0 scroll-fade transition-all duration-6000">
             <div>
               <img
                 class="relative z-40"
@@ -284,20 +330,20 @@
             <!-- emblem -->
             <div class="relative z-40 mx-auto -mt-60 flex justify-center">
               <img
-                class="h-[370px] w-auto"
+                class="h-[370px] w-auto scroll-fade scroll-fade-right transition-all duration-4000"
                 src="img/01/page4/emblem.png"
                 alt=""
               />
             </div>
             <div class="relative z-50 mx-auto -mt-70 text-center">
-              <p class="font-pinyon text-4xl">Resepsi</p>
-              <p class="mb-5 text-xl font-bold">
+              <p class="font-pinyon text-4xl scroll-fade scroll-fade-left transition-all duration-4000 delay-200">Resepsi</p>
+              <p class="mb-5 text-xl font-bold scroll-fade scroll-fade-left transition-all duration-4000 delay-400">
                 Minggu, <br />
                 14 Desember 2025
               </p>
-              <p class="mb-5 text-[11px] font-bold">
+              <p class="mb-5 text-[11px] font-bold scroll-fade scroll-fade-left transition-all duration-4000 delay-400">
                 11.00 - 13.00 WIB <br />
-                <span class="font-normal"
+                <span class="font-normal scroll-fade scroll-fade-left transition-all duration-4000 delay-600"
                   >The Harmony Hall <br />
                   Jl. Anggrek No. 27, Sleman <br />
                   Yogyakarta</span
@@ -306,7 +352,7 @@
             </div>
             <div>
               <img
-                class="relative z-30 -mt-32"
+                class="relative z-30 -mt-32 scroll-fade transition-all duration-6000"
                 src="img/01/page6/bg bunga bawah.png"
                 alt=""
               />
