--- a/public/desain02.html
+++ b/public/desain02.html
@@ -228,7 +228,7 @@
         <!-- halaman 5 -->
         <section
           id="halaman5"
-          class="hidden min-h-svh bg-[url('img/02/Page2/baground.png')] bg-cover bg-center bg-no-repeat text-center"
+          class="-mt-1 hidden min-h-svh bg-[url('img/02/Page2/baground.png')] bg-cover bg-center bg-no-repeat text-center"
         >
           <!-- pengantin -->
           <div class="mx-6">
@@ -398,7 +398,7 @@
           <div class="pt-10">
             <div class="mx-auto flex justify-center">
               <img
-                class="scroll-fade js-animate-after w-15 transition-all duration-6000 mb-5"
+                class="scroll-fade js-animate-after mb-5 w-15 transition-all duration-6000"
                 src="img/02/Page8/bungastreaming.png"
                 alt=""
               />
@@ -410,7 +410,7 @@
                 Live Streaming
               </h1>
               <p
-                class="scroll-fade scroll-fade-right text-center text-[12px] transition-all delay-200 duration-4000 mx-20"
+                class="scroll-fade scroll-fade-right mx-20 text-center text-[12px] transition-all delay-200 duration-4000"
               >
                 Temui kami secara virtual untuk menyaksikan acara pernikahan
                 kami melalui tautan di bawah ini:
@@ -453,7 +453,7 @@
             </div>
             <div
               id="countdown"
-              class="mt-5 flex justify-center gap-3 text-white pb-10"
+              class="mt-5 flex justify-center gap-3 pb-10 text-white"
             >
               <!-- Hari -->
               <div
