--- a/public/desain02.html
+++ b/public/desain02.html
@@ -177,7 +177,7 @@
         <!-- halaman 4 -->
         <section
           id="halaman4"
-          class="-mt-2 hidden min-h-svh bg-[url('img/02/Page2/baground.png')] bg-cover bg-center bg-no-repeat text-center"
+          class="-mt-2 hidden min-h-svh bg-[url('img/02/Page2/baground.png')] bg-cover bg-center bg-repeat text-center"
         >
           <!-- pengantin -->
           <div class="">
@@ -228,7 +228,7 @@
         <!-- halaman 5 -->
         <section
           id="halaman5"
-          class="-mt-1 hidden min-h-svh bg-[url('img/02/Page2/baground.png')] bg-cover bg-center bg-no-repeat text-center"
+          class="-mt-1 hidden min-h-svh bg-[url('img/02/Page2/baground.png')] bg-cover bg-center bg-repeat text-center"
         >
           <!-- pengantin -->
           <div class="mx-6">
